--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="highlight-clean" style="padding-bottom: 10px;">
         <div class="container" style="max-width: 1000px; ">
             <h1 class="text-center"><b>PanoFree</b>: Tuning-Free Holistic Multi-view Image Generation with Cross-view Self-Guidance </h1>
-            <h5 class="text-center"> <b>Accepted by ECCV 2024</b> </h5>
+            <h5 class="text-center"> <b>ECCV 2024</b> </h5>
         </div>
         <div class="container" style="max-width: 980px;     padding: 15px 0;">
             <div class="row authors">
